Integer -> JsonObject오류 못잡는중..

--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -267,7 +267,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -295,7 +295,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -325,7 +325,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -354,7 +354,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
