--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/imageList_LOG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이미지 리스트 LOG"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/moreReview"
         android:layout_width="wrap_content"
