하단바 리뷰에서 들어갔을 때, 리뷰를 작성할 카페 검색할 때의 리스트 대표 이미지 업로드

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -218,7 +218,7 @@
 
     <fragment
         android:id="@+id/navigation_review_cafelist"
-        android:name="com.example.wmc.ui.Fragment.ReviewCafeListFragment"
+        android:name="com.example.wmc.a_No_USE_Files.ReviewCafeListFragment"
         android:label="@string/review_cafe_list"
         tools:layout="@layout/fragment_review_cafelist" >
 
