--- a/app/src/main/res/layout/fragment_app_login.xml
+++ b/app/src/main/res/layout/fragment_app_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_background_color">
+    android:background="@color/white">
 
 
     <ScrollView
@@ -24,7 +24,7 @@
                 android:id="@+id/logo"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="70dp"
                 android:src="@drawable/logo_v2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +34,10 @@
                 android:id="@+id/login_id_input"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:hint="아이디"
                 android:inputType="textPersonName"
+                android:maxLength="12"
                 android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,9 +47,10 @@
                 android:id="@+id/login_pw_input"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:hint="비밀번호"
                 android:inputType="textPersonName"
+                android:maxLength="20"
                 android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,30 +58,31 @@
 
             <Button
                 android:id="@+id/login_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/edge_square_brown"
                 android:text="로그인"
                 android:textColor="#FFFFFF"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_pw_input" />
 
             <TextView
-                android:id="@+id/signUp_button"
+                android:id="@+id/signUp_button0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginTop="60dp"
                 android:clickable="true"
                 android:text="회원가입"
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/search_id_pw_button"
+                app:layout_constraintHorizontal_bias="0.83"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
             <TextView
@@ -88,9 +91,9 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="0dp"
                 android:background="#000000"
-                app:layout_constraintEnd_toEndOf="@+id/signUp_button"
-                app:layout_constraintStart_toStartOf="@+id/signUp_button"
-                app:layout_constraintTop_toBottomOf="@+id/signUp_button" />
+                app:layout_constraintEnd_toEndOf="@+id/signUp_button0"
+                app:layout_constraintStart_toStartOf="@+id/signUp_button0"
+                app:layout_constraintTop_toBottomOf="@+id/signUp_button0" />
 
             <TextView
                 android:id="@+id/search_id_pw_button"
@@ -99,11 +102,11 @@
                 android:clickable="true"
                 android:text="아이디 찾기"
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/signUp_button" />
+                app:layout_constraintTop_toTopOf="@+id/signUp_button0" />
 
             <TextView
                 android:id="@+id/line4"
@@ -118,16 +121,17 @@
                 android:id="@+id/search_id_pw_button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
                 android:layout_marginBottom="40dp"
                 android:clickable="true"
                 android:text="비밀번호 찾기"
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.17"
                 app:layout_constraintStart_toEndOf="@+id/search_id_pw_button"
-                app:layout_constraintTop_toTopOf="@+id/signUp_button" />
+                app:layout_constraintTop_toTopOf="@+id/signUp_button0" />
 
             <TextView
                 android:id="@+id/line5"
@@ -135,6 +139,7 @@
                 android:layout_height="1dp"
                 android:background="#000000"
                 app:layout_constraintEnd_toEndOf="@+id/search_id_pw_button2"
+                app:layout_constraintHorizontal_bias="0.44"
                 app:layout_constraintStart_toStartOf="@+id/search_id_pw_button2"
                 app:layout_constraintTop_toBottomOf="@+id/search_id_pw_button2" />
 
