--- a/app/src/main/res/layout/fragment_app_signup.xml
+++ b/app/src/main/res/layout/fragment_app_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_background_color">
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/logoLayout"
@@ -84,16 +84,17 @@
 
                 <EditText
                     android:id="@+id/signUp_id_input"
-                    android:layout_width="250dp"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
                     android:hint="아이디 입력"
                     android:inputType="textPersonName"
+                    android:maxLength="12"
                     android:singleLine="true"
                     android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/signUp_button2"
-                    android:layout_width="50dp"
+                    android:layout_width="60dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:background="@drawable/edge_square_brown"
@@ -126,7 +127,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:hint="비밀번호 입력"
-                    android:inputType="textPersonName"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -155,7 +157,33 @@
                     android:layout_height="wrap_content"
                     android:hint="비밀번호 확인"
                     android:inputType="textPersonName"
+                    android:maxLength="20"
                     android:singleLine="true"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/nickNameCautionMark2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:paddingLeft="50dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="5dp"
+                    android:text="*"
+                    android:textColor="#FF0000" />
+
+                <Spinner
+                    android:id="@+id/spinner4"
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:textColor="#0000ff"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -175,14 +203,15 @@
                     android:paddingTop="10dp"
                     android:paddingRight="5dp"
                     android:text="*"
-                    android:textColor="#FF0000" />
+                    android:textColor="#00FF0000" />
 
                 <EditText
                     android:id="@+id/signUp_nickName_input"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="내가 다닌 초등학교의 이름은?"
+                    android:hint="비밀번호 확인 질문"
                     android:inputType="textPersonName"
+                    android:maxLength="20"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -207,13 +236,25 @@
 
                 <EditText
                     android:id="@+id/signUp_nubmer_input"
-                    android:layout_width="300dp"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
                     android:hint="전화번호"
                     android:inputType="number"
                     android:maxLength="11"
                     android:singleLine="true"
                     android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/signUp_button"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/edge_square_brown"
+                    android:text="중복확인"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -240,6 +281,7 @@
                     android:layout_height="wrap_content"
                     android:hint="주소"
                     android:inputType="textPersonName"
+                    android:maxLength="40"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -335,15 +377,15 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/signUp_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/signUp_button1"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edge_square_brown"
                 android:text="회원가입"
                 android:textColor="#FFFFFF"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -351,13 +393,38 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/searchID_PW_button3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:text="로그인"
+                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/searchID_PW_button"
+                    app:layout_constraintEnd_toStartOf="@+id/searchID_PW_button"
+                    app:layout_constraintHorizontal_bias="0.83"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/searchID_PW_button" />
+
+                <TextView
+                    android:id="@+id/line17"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#000000"
+                    app:layout_constraintEnd_toEndOf="@+id/searchID_PW_button3"
+                    app:layout_constraintStart_toStartOf="@+id/searchID_PW_button3"
+                    app:layout_constraintTop_toBottomOf="@+id/searchID_PW_button3" />
+
+                <TextView
                     android:id="@+id/searchID_PW_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="120dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
                     android:layout_weight="1"
                     android:clickable="true"
                     android:text="아이디 찾기"
@@ -365,6 +432,7 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -382,7 +450,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="120dp"
                     android:layout_weight="1"
                     android:clickable="true"
                     android:text="비밀번호 찾기"
@@ -391,6 +458,8 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/searchID_PW_button"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintStart_toEndOf="@+id/searchID_PW_button"
                     app:layout_constraintTop_toTopOf="@+id/searchID_PW_button" />
 
                 <TextView
