--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,11 +42,13 @@
             android:layout_height="40dp"
             android:background="@drawable/edge_top_back"
             android:ems="10"
-            android:hint="시, 군, 구를 입력해주세요."
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true"
+            android:enabled="false"
+            android:gravity="center"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/logo"
