--- a/app/src/main/res/layout/fragment_app_signup.xml
+++ b/app/src/main/res/layout/fragment_app_signup.xml
@@ -86,7 +86,7 @@
                     android:id="@+id/signUp_id_input"
                     android:layout_width="240dp"
                     android:layout_height="wrap_content"
-                    android:hint="아이디 입력"
+                    android:hint="아이디 입력 (6~12자)"
                     android:inputType="textPersonName"
                     android:maxLength="12"
                     android:singleLine="true"
@@ -126,9 +126,9 @@
                     android:id="@+id/signUp_pw_input"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="비밀번호 입력"
+                    android:hint="비밀번호 입력 (8~15자)"
                     android:inputType="textPassword"
-                    android:maxLength="20"
+                    android:maxLength="15"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -156,8 +156,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:hint="비밀번호 확인"
-                    android:inputType="textPersonName"
-                    android:maxLength="20"
+                    android:inputType="textPassword"
+                    android:maxLength="15"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -221,70 +221,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/nubmerCautionMark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="right"
-                    android:paddingLeft="50dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="5dp"
-                    android:text="*"
-                    android:textColor="#FF0000" />
-
-                <EditText
-                    android:id="@+id/signUp_nubmer_input"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:hint="전화번호"
-                    android:inputType="number"
-                    android:maxLength="11"
-                    android:singleLine="true"
-                    android:textSize="14sp" />
-
-                <Button
-                    android:id="@+id/signUp_button"
-                    android:layout_width="60dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/edge_square_brown"
-                    android:text="중복확인"
-                    android:textColor="#FFFFFF"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+                android:orientation="horizontal"/>
 
             <LinearLayout
                 android:id="@+id/addressLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/addressCautionMark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="right"
-                    android:paddingLeft="50dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="5dp"
-                    android:text="*"
-                    android:textColor="#FF0000" />
-
-                <EditText
-                    android:id="@+id/signUp_address_input"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:hint="주소"
-                    android:inputType="textPersonName"
-                    android:maxLength="40"
-                    android:singleLine="true"
-                    android:textSize="14sp" />
-            </LinearLayout>
+                android:orientation="horizontal"/>
 
             <LinearLayout
                 android:id="@+id/preferenceLayout"
@@ -381,7 +325,7 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/edge_square_brown"
                 android:text="회원가입"
                 android:textColor="#FFFFFF"
