--- a/app/src/main/res/layout/fragment_app_login.xml
+++ b/app/src/main/res/layout/fragment_app_login.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:hint="비밀번호"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:maxLength="15"
                 android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
