--- a/app/src/main/res/layout/fragment_mypage_grade.xml
+++ b/app/src/main/res/layout/fragment_mypage_grade.xml
@@ -92,7 +92,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="위치인증 X, 리뷰 좋아요 가능"
+            android:text="위치인증 0회, 리뷰 좋아요 가능"
             android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -164,7 +164,7 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="위치인증 O, 리뷰 작성 가능"
+            android:text="위치인증 1회, 리뷰 작성 가능"
             android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView14"
@@ -236,7 +236,7 @@
             android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="리뷰 5회 작성, 카페 수정 및 등록 가능"
+            android:text="위치인증 5회, 카페 수정 및 등록 가능"
             android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView16"
