카페 디테일에서 리뷰 위치인증 됐을경우, 위치인증글자 추가

--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -83,6 +83,19 @@
                             app:layout_constraintStart_toEndOf="@+id/level" />
 
                         <TextView
+                            android:id="@+id/moreReview_location_text"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:singleLine="true"
+                            android:text="[위치인증]"
+                            android:textColor="@color/orange"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/nickName"
+                            app:layout_constraintStart_toEndOf="@+id/level_and_location"
+                            app:layout_constraintTop_toTopOf="@+id/nickName" />
+
+                        <TextView
                             android:id="@+id/reviewMore_writeTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
