--- a/app/src/main/res/layout/item_mypage_review.xml
+++ b/app/src/main/res/layout/item_mypage_review.xml
@@ -50,6 +50,19 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/moreReview_location_text"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="[위치인증]"
+                            android:textColor="@color/orange"
+                            android:layout_marginStart="7dp"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/mypageReview_CafeName"
+                            app:layout_constraintStart_toEndOf="@+id/mypageReview_CafeName"
+                            app:layout_constraintTop_toTopOf="@+id/mypageReview_CafeName" />
+
+                        <TextView
                             android:id="@+id/mypageReview_writeTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
