리뷰 더보기, 마이페이지 리뷰에 위치인증에 따라 위치인증 글자 띄우기

--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -91,6 +91,7 @@
                             android:text="[위치인증]"
                             android:textColor="@color/orange"
                             android:textSize="10sp"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@+id/nickName"
                             app:layout_constraintStart_toEndOf="@+id/level_and_location"
                             app:layout_constraintTop_toTopOf="@+id/nickName" />
