--- a/app/src/main/res/layout/item_mypage_review.xml
+++ b/app/src/main/res/layout/item_mypage_review.xml
@@ -50,7 +50,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/moreReview_location_text"
+                            android:id="@+id/mypage_location_text"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:singleLine="true"
@@ -58,6 +58,7 @@
                             android:textColor="@color/orange"
                             android:layout_marginStart="7dp"
                             android:textSize="12sp"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@+id/mypageReview_CafeName"
                             app:layout_constraintStart_toEndOf="@+id/mypageReview_CafeName"
                             app:layout_constraintTop_toTopOf="@+id/mypageReview_CafeName" />
